Improved UI and Fix Issue:
*scrollbar styling.
*bookmark position
*settings autocomplete.
*overall responsiveness and optimzed some code.

--- a/code/src/index.css
+++ b/code/src/index.css
@@ -5,3 +5,6 @@
 html{
     user-select: none;
 }
+body::-webkit-scrollbar {
+    display: none;
+}
